# inplace

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENCE.txt  README.md  run
.github/workflows/: base.yml  main.yml
docs/: todo.md
include/inplace/: any.hpp  functional.hpp  vector.hpp
include/inplace/details/: any.hpp  functional.hpp  macros.hpp  storage.hpp  vector.hpp
test/unit/: .clang-tidy  CMakeLists.txt  any_test.cpp  function_test.cpp  macros.hpp  vector_test.cpp
tools/cmake/: gcc15-aarch64-linux-gnu.cmake  gcc15-arm-linux-gnueabihf.cmake
tools/runner/: __init__.py  action.py  announce.py  clang_format.py  clang_tidy.py  cmake.py  execute_command.py  runner.py
